// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with Empyty array 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  true
   ? (
  <p>
     No Expense 
  </p>
  ) : (
  )
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div>
  <h1>
    Expense List
  </h1>
   ? (
  <p>
     No Expense 
  </p>
  ) : (
  <ExpenseListItem
    amount={195}
    createdAt={0}
    description="Gum"
    id="1"
    note=""
  />
  <ExpenseListItem
    amount={20000}
    createdAt={-345600000}
    description="Rent"
    id="2"
    note=""
  />
  <ExpenseListItem
    amount={4500}
    createdAt={345600000}
    description="Credit card"
    id="3"
    note=""
  />
  )
</div>
`;
